# boom

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
ai_agent/: __init__.py  cli.py
ai_agent/core/: __init__.py  agent.py  config.py  learner.py  task_generator.py  telemetry.py
ai_agent/data/: __init__.py  quality_metrics.py  sequence.py  state_analyzer.py  trajectory_manager.py
ai_agent/environment/: __init__.py  git_env.py
docs/: README.md  architecture.md  usage.md
examples/: demo.py
tests/: conftest.py  test_agent.py  test_config.py  test_learner.py  test_quality_metrics.py  test_state_analyzer.py  test_task_generator.py  test_telemetry.py  test_trajectory_manager.py
